Changes for 1.9

 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.4rc1

 - [ZBX-2894] fixed multiple references on same line in map labels (Vedmak)
 - [ZBX-2888] fixed host profiles export (Vedmak)
 - [ZBX-2890] fixed parsing of negative values in trigger expressions (Vedmak)
 - [ZBX-2798] added more checks for unknown nodes to communication between nodes (asaveljevs)
 - [ZBX-2716] make all example initscripts point to sbin for daemon path (Richlv)

Changes for 1.8.3

 - [ZBX-2875] updated Japanese translation; thanks to Kodai Terashima (Richlv)
 - [ZBX-2856] removed debug info (Aly)
 - [ZBX-2855] fixed new line symbol for latest opera browser (Aly)
 
Changes for 1.8.3rc4

 - [ZBX-2226] fixed template item update, when linked to host with existing item with same key (Aly)
 - [ZBX-2853] updated Ukrainian translation; thanks to zalex_ua (Richlv)
 - [ZBX-1324] replaced more user visible strings ZABBIX with Zabbix (Richlv)
 - [ZBX-2836] fixed text items history not displaying all spaces in text (Vedmak)
 - [ZBX-2835] improved screen permission checks in frontend (Vedmak)
 - [ZBX-2829] fixed web item graphs favourites (Vedmak)
 - [ZBX-2812] updated French translation; thanks to Alixen (Vedmak)
 - [ZBX-2823] updated Russian translation; thanks to Pustovalov Alexey (Vedmak)
 - [ZBX-2817] fixed history links for history and media types (Vedmak)
 - [ZBX-2833] fixed JS error in monitoring events screen (Aly)
 - [ZBX-2819] fixed showing trends for symbolic items (Vedmak)
 - [ZBX-2825] made profile form redirect to the last visited page on successful save (Aly)
 - [ZBX-2809] fixed login problem in case of guest user being disabled (Aly)